// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test screenshots for all components matches Crypto snapshot 1`] = `
<section
  className="page-crypt"
>
  <div
    className="top-bar"
  >
    <button
      className="go-back"
      onClick={[Function]}
      type="button"
    >
      <p
        className="chevron left icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 112L184 256l144 144"
            fill="none"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="48"
          />
        </svg>
      </p>
    </button>
    <h4>
      Crypto Currencies
    </h4>
    <div
      className="top-left"
    />
  </div>
  <div
    className="banner crypt"
  >
    <a
      className="banner-link crypto"
      href="/crypto"
      onClick={[Function]}
    >
      <div
        className="banner-info"
      >
        <h3
          className="banner-title"
        >
          Cryptos
        </h3>
        <p
          className="total"
        >
          Market Capitalization: $2,78 T
        </p>
      </div>
    </a>
  </div>
  <h4
    className="sub-heading"
  >
    Tradable Crypto Pairs
  </h4>
  <ul
    className="crypt-pairs"
  />
  <button
    className="bottom-bar expand-button"
    onClick={[Function]}
    type="button"
  >
    More
     
    <i
      className="chevron down icon"
    />
  </button>
</section>
`;

exports[`test screenshots for all components matches EFTs snapshot 1`] = `
<section
  className="page-efts"
>
  <div
    className="top-bar"
  >
    <button
      className="go-back"
      onClick={[Function]}
      type="button"
    >
      <p
        className="chevron left icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 112L184 256l144 144"
            fill="none"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="48"
          />
        </svg>
      </p>
    </button>
    <h4>
      ETFs
    </h4>
    <div
      className="top-left"
    />
  </div>
  <div
    className="banner efts"
  >
    <a
      className="banner-link efts"
      href="/efts"
      onClick={[Function]}
    >
      <div
        className="banner-info"
      >
        <h3
          className="banner-title"
        >
          ETF iShares
        </h3>
        <p
          className="total"
        >
          Market Capitalization: $325.43 B
        </p>
      </div>
    </a>
  </div>
  <h4
    className="sub-heading"
  >
    Tradable ETF iShares
  </h4>
  <ul
    className="eft-pairs loading"
  >
    <li />
  </ul>
  <button
    className="bottom-bar expand-button"
    onClick={[Function]}
    type="button"
  >
    More
     
    <i
      className="chevron down icon"
    />
  </button>
</section>
`;

exports[`test screenshots for all components matches Forex snapshot 1`] = `
<section
  className="page-forex"
>
  <div
    className="top-bar"
  >
    <button
      className="go-back"
      onClick={[Function]}
      type="button"
    >
      <p
        className="chevron left icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 112L184 256l144 144"
            fill="none"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="48"
          />
        </svg>
      </p>
    </button>
    <h4>
      Currencies
    </h4>
    <div
      className="top-left"
    />
  </div>
  <div
    className="banner forex"
  >
    <a
      className="banner-link forex"
      href="/forex"
      onClick={[Function]}
    >
      <div
        className="banner-info"
      >
        <h3
          className="banner-title"
        >
          Forex
        </h3>
        <p
          className="total"
        >
          Market Capitalization: $6.6 T
        </p>
      </div>
    </a>
  </div>
  <h4
    className="sub-heading"
  >
    Tradable Forex Pairs
  </h4>
  <ul
    className="forex-pairs"
  />
  <button
    className="bottom-bar expand-button"
    onClick={[Function]}
    type="button"
  >
    More
     
    <i
      className="chevron down icon"
    />
  </button>
</section>
`;

exports[`test screenshots for all components matches Home snapshot 1`] = `
<section
  className="home-page"
>
  <div
    className="top-bar"
  >
    <h4>
      Markets
    </h4>
    <div
      className="top-left"
    >
      <i
        className="microphone icon"
      >
         
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="Microphone_On"
          >
            <g>
              <path
                d="M11.989,2.065a4.507,4.507,0,0,0-4.5,4.5v5.76a4.5,4.5,0,0,0,9,0V6.565A4.507,4.507,0,0,0,11.989,2.065Zm0,13.76a3.5,3.5,0,0,1-3.5-3.5V6.565a3.5,3.5,0,0,1,6.94-.62h-1.87a.5.5,0,0,0-.5.5.5.5,0,0,0,.5.5h1.93v2h-1.93a.5.5,0,0,0-.5.5.508.508,0,0,0,.5.5h1.93v2h-1.94a.508.508,0,0,0-.5.5.515.515,0,0,0,.5.5h1.88A3.492,3.492,0,0,1,11.989,15.825Z"
              />
              <path
                d="M12.489,18.925v2.01h3.5a.5.5,0,0,1,0,1h-8a.5.5,0,0,1,0-1h3.5v-1.99a6.055,6.055,0,0,1-2.74-.88,6.291,6.291,0,0,1-2.97-5.14c-.03-1.04,0-2.09,0-3.13a.5.5,0,0,1,1,0c0,1.04-.03,2.09,0,3.13A5.212,5.212,0,0,0,17.2,12.7c.01-.96,0-1.93,0-2.9a.5.5,0,0,1,1,0,26.322,26.322,0,0,1-.08,3.97A6.235,6.235,0,0,1,12.489,18.925Z"
              />
            </g>
          </g>
        </svg>
         
      </i>
      <i
        className="cog icon"
      >
         
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="Settings"
          >
            <g>
              <path
                d="M12.6,20.936H11.3a.883.883,0,0,1-.852-.654l-.774-2.833-2.5,1.435a.886.886,0,0,1-1.06-.138l-.925-.919a.884.884,0,0,1-.143-1.066l1.469-2.545L6.509,14.2l-2.787-.747a.882.882,0,0,1-.654-.851V11.3a.882.882,0,0,1,.652-.85l2.839-.777L5.12,7.171a.885.885,0,0,1,.141-1.062l.918-.918A.885.885,0,0,1,7.24,5.049L9.792,6.514l.012,0,.745-2.79a.881.881,0,0,1,.851-.655h1.3a.883.883,0,0,1,.852.655l.762,2.838,2.509-1.441a.885.885,0,0,1,1.059.138l.926.919a.882.882,0,0,1,.141,1.067L17.483,9.777l.008.022,2.786.746a.883.883,0,0,1,.653.851v1.3a.883.883,0,0,1-.654.852l-2.837.774,1.439,2.505a.881.881,0,0,1-.141,1.063l-.917.917a.888.888,0,0,1-1.063.141l-2.539-1.462L14.2,17.5l-.745,2.785A.885.885,0,0,1,12.6,20.936Zm-1.21-1h1.119l.738-2.756a.888.888,0,0,1,.528-.592l.134-.052a.873.873,0,0,1,.76.057l2.51,1.445.789-.789-1.423-2.478a.881.881,0,0,1-.048-.78l.052-.125a.875.875,0,0,1,.584-.51l2.8-.749v-1.12l-2.755-.737a.885.885,0,0,1-.592-.529l-.052-.132a.882.882,0,0,1,.057-.763L18.04,6.818l-.8-.79-2.48,1.425a.878.878,0,0,1-.772.052l-.115-.047a.888.888,0,0,1-.518-.588l-.748-2.806H11.492l-.738,2.762a.883.883,0,0,1-.539.6l-.12.045a.874.874,0,0,1-.751-.058L6.822,5.962l-.789.789L7.455,9.227a.886.886,0,0,1,.046.785l-.051.12a.876.876,0,0,1-.579.5l-2.8.758v1.121l2.757.738a.889.889,0,0,1,.591.525l.048.121a.874.874,0,0,1-.055.77L5.958,17.181l.8.791,2.47-1.419a.878.878,0,0,1,.787-.045l.106.044a.874.874,0,0,1,.526.591ZM9.75,17.482l.008,0ZM9.6,17.421l.007,0ZM6.487,14.147h0Zm.044-4.411h0Zm7.724-3.2Z"
              />
              <path
                d="M12,15a3,3,0,1,1,3-3A3,3,0,0,1,12,15Zm0-5a2,2,0,1,0,2,2A2,2,0,0,0,12,10Z"
              />
            </g>
          </g>
        </svg>
         
      </i>
    </div>
  </div>
  <div
    className="banner home"
  >
    <a
      className="banner-link forex"
      href="/forex"
      onClick={[Function]}
    >
      <div
        className="banner-info"
      >
        <h3
          className="banner-title"
        >
          Forex
        </h3>
        <p
          className="total"
        >
          Market Capitalization: $6.6 T
        </p>
      </div>
    </a>
  </div>
  <h4
    className="sub-heading"
  >
    Popular
  </h4>
  <div
    className="content-body"
  >
    <a
      className="category majors"
      href="/majors"
      onClick={[Function]}
    >
      <div
        className="category-info"
      >
        <i
          className="chevron circle right icon"
        />
        <h3
          className="category-title"
        >
          Majors
        </h3>
        <p
          className="total"
        >
          Cap: $6.6 T
        </p>
      </div>
    </a>
    <a
      className="category crypto"
      href="/crypto"
      onClick={[Function]}
    >
      <div
        className="category-info"
      >
        <i
          className="chevron circle right icon"
        />
        <h3
          className="category-title"
        >
          Cryptos
        </h3>
        <p
          className="total"
        >
          Cap: $2,78 T
        </p>
      </div>
    </a>
    <a
      className="category stocks"
      href="/stocks"
      onClick={[Function]}
    >
      <div
        className="category-info"
      >
        <i
          className="chevron circle right icon"
        />
        <h3
          className="category-title"
        >
          Stocks
        </h3>
        <p
          className="total"
        >
          Cap:  $48,56 M
        </p>
      </div>
    </a>
    <a
      className="category efts"
      href="/efts"
      onClick={[Function]}
    >
      <div
        className="category-info"
      >
        <i
          className="chevron circle right icon"
        />
        <h3
          className="category-title"
        >
          ETF iShares
        </h3>
        <p
          className="total"
        >
          Cap: $325.43 B
        </p>
      </div>
    </a>
  </div>
  <div
    className="bottom-bar"
  >
    <a
      href="http://creativecommons.org/licenses/by/4.0/"
      rel="license"
    >
      <img
        alt="Licencia Creative Commons"
        className="license-logo"
        src="https://i.creativecommons.org/l/by/4.0/88x31.png"
      />
    </a>
    <br />
    <a
      className="lic-text"
      href="http://creativecommons.org/licenses/by/4.0/"
      rel="license"
    >
      Licencia Creative Commons Atribución 4.0 Internacional
    </a>
  </div>
</section>
`;

exports[`test screenshots for all components matches Loading snapshot 1`] = `
<ul
  className="stocks loading"
>
  <li />
</ul>
`;

exports[`test screenshots for all components matches Majors snapshot 1`] = `
<section
  className="page-majors"
>
  <div
    className="top-bar"
  >
    <button
      className="go-back"
      onClick={[Function]}
      type="button"
    >
      <p
        className="chevron left icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 112L184 256l144 144"
            fill="none"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="48"
          />
        </svg>
      </p>
    </button>
    <h4>
      Major Currencies
    </h4>
    <div
      className="top-left"
    />
  </div>
  <div
    className="banner majors"
  >
    <a
      className="banner-link majors"
      href="/majors"
      onClick={[Function]}
    >
      <div
        className="banner-info"
      >
        <h3
          className="banner-title"
        >
          Majors
        </h3>
        <p
          className="total"
        >
          Market Capitalization: $6.6 T
        </p>
      </div>
    </a>
  </div>
  <h4
    className="sub-heading"
  >
    Tradable Forex Pairs
  </h4>
  <ul
    className="major-pairs"
  />
  <button
    className="bottom-bar expand-button"
    onClick={[Function]}
    type="button"
  >
    More
     
    <i
      className="chevron down icon"
    />
  </button>
</section>
`;

exports[`test screenshots for all components matches Stocks snapshot 1`] = `
<section
  className="page-stocks"
>
  <div
    className="top-bar"
  >
    <button
      className="go-back"
      onClick={[Function]}
      type="button"
    >
      <p
        className="chevron left icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 112L184 256l144 144"
            fill="none"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="48"
          />
        </svg>
      </p>
    </button>
    <h4>
      Stocks
    </h4>
    <div
      className="top-left"
    />
  </div>
  <div
    className="banner stocks"
  >
    <a
      className="banner-link stocks"
      href="/stocks"
      onClick={[Function]}
    >
      <div
        className="banner-info"
      >
        <h3
          className="banner-title"
        >
          Stocks
        </h3>
        <p
          className="total"
        >
          Market Capitalization:  $48,56 M
        </p>
      </div>
    </a>
  </div>
  <h4
    className="sub-heading"
  >
    Tradable Stocks
  </h4>
  <ul
    className="stock-pairs loading"
  >
    <li />
  </ul>
  <button
    className="bottom-bar expand-button"
    onClick={[Function]}
    type="button"
  >
    More
     
    <i
      className="chevron down icon"
    />
  </button>
</section>
`;
